# rust-xpx-supercontracts-examples

./: .gitignore  README.md
ico/: Cargo.toml  Makefile  README.md  xpx_supercontracts_example_ico.wat
ico/src/: lib.rs  main.rs
matrices/: Cargo.toml  Makefile  README.md  multiply_matrices_emample.wat
matrices/src/: lib.rs
oracles/: Cargo.toml  Makefile  README.md
oracles/src/: lib.rs
