[package]
name = "xpx-supercontracts-example-ico"
version = "0.1.0"
authors = ["ProxymaX Core Development Team","Evgeny Ukhanov <mrlsd@ya.ru>"]
edition = "2018"
homepage = "https://www.proximax.io/"
documentation = "https://docs.rs/xpx-supercontracts-sdk"
readme = "README.md"
keywords = ["distributed", "blockchain", "sdk", "supercontract", "xpx"]
categories = ["cryptography", "development-tools", "wasm"]
license = "Apache-2.0"
repository = "https://github.com/proximax-storage/rust-xpx-supercontracts-sdk"

[lib]
crate-type = ["cdylib"]

[dependencies]
xpx-supercontracts-sdk = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure = "0.1.5"
csv = "1.1"
